# mlops-llmops-mlflow

./: .gitignore  README.md  pyproject.toml
docs/assets/: header.json  header.jsonp
docs/assets/05832AF0-5C7B-405C-B144-432E6B5BA164/: 05832AF0-5C7B-405C-B144-432E6B5BA164.json  05832AF0-5C7B-405C-B144-432E6B5BA164.jsonp
docs/assets/1638EE52-085B-4536-A53D-4E97B690F092/: 1638EE52-085B-4536-A53D-4E97B690F092.json  1638EE52-085B-4536-A53D-4E97B690F092.jsonp
docs/assets/25D96314-8CD7-458E-93ED-629DC74EF94B/: 25D96314-8CD7-458E-93ED-629DC74EF94B.json  25D96314-8CD7-458E-93ED-629DC74EF94B.jsonp
docs/assets/26024B78-323E-44F2-86FA-0878D3878B28/: 26024B78-323E-44F2-86FA-0878D3878B28.json  26024B78-323E-44F2-86FA-0878D3878B28.jsonp
docs/assets/27727AC8-2328-4515-86D7-39EAC8A04C0E/: 27727AC8-2328-4515-86D7-39EAC8A04C0E.json  27727AC8-2328-4515-86D7-39EAC8A04C0E.jsonp
docs/assets/2F3CB27F-03E0-4C37-9DAB-BE894D14694C/: 2F3CB27F-03E0-4C37-9DAB-BE894D14694C.json  2F3CB27F-03E0-4C37-9DAB-BE894D14694C.jsonp
docs/assets/3760A20D-9F9C-4769-AC97-40D6D66A6B3D/: 3760A20D-9F9C-4769-AC97-40D6D66A6B3D.json  3760A20D-9F9C-4769-AC97-40D6D66A6B3D.jsonp
examples/ai_gateway/: ai_gateway.ipynb  config.yaml
examples/classification_recipes/notebooks/: jupyter.ipynb
examples/deployment/: deployment.py
examples/llm_evaluation/: llm_evaluation.ipynb
examples/local_llm/: local_llm.ipynb
examples/openai_chat_completions/: openai-chat-completions.ipynb  openai-qa.ipynb
examples/regression_recipes/: recipe.yaml
examples/tensorflow/: tensorflow.ipynb
slides/assets/: header.jsonp
(+119 files in other folders)
